# smiles-iupac

./: .env.sample  .gitignore  README.md  analysis.ipynb  data-collected.csv  pyproject.toml  smiles-iupac.ipynb
data/: collected-gemini-2.5-pro-N100-edGcOddc.csv
scripts/: list-gemini-models.py
